chore: configure faker.config

--- a/faker.config
+++ b/faker.config
@@ -1,15 +1,36 @@
 public.accounts.email:faker.internet.email
+public.accounts.password_digest:extension.replaceWithEmptyString
+public.accounts.password_reset_token:extension.replaceWithEmptyString
+public.accounts.qr_token:extension.replaceWithEmptyString
 public.addresses.street:faker.address.streetName
+public.addresses.street_number:extension.randomBuildingNumber
 public.addresses.city:faker.address.cityName
-public.addresses.street_number:faker.datatype.number
 public.addresses.country_id:extension.randomCountryID
 public.addresses.zip:faker.address.zipCode
 public.patients.address:faker.address.streetAddress
-public.patients.birth_date:extension.randomBirthdate
+public.patients.birth_date:extension.randomBirthDate
 public.patients.country:faker.address.country
 public.patients.first_name:faker.name.firstName
 public.patients.last_name:faker.name.lastName
-public.patients.gender:faker.name.gender
-public.patients.phone:faker.phone.phoneNumber
+public.patients.gender:extension.randomGender
+public.patients.phone:extension.randomPhoneNumber
 public.patients.height:extension.randomHeight
 public.patients.weight:extension.randomWeight
+public.patients.business_phone:extension.randomPhoneNumber
+public.patients.therapy_goal:extension.replaceWithEmptyString
+public.patients.therapist_recommendation:extension.replaceWithEmptyString
+public.patients.other_informations:extension.replaceWithEmptyString
+public.therapists.birth_date:extension.randomBirthDate
+public.therapists.first_name:faker.name.firstName
+public.therapists.last_name:faker.name.lastName
+public.therapists.gender:extension.randomGender
+public.therapists.phone:extension.randomPhoneNumber
+public.clinic_infos.contact_phone:extension.randomPhoneNumber
+public.clinic_infos.fax:extension.randomPhoneNumber
+public.clinic_infos.contact_email:faker.internet.email
+public.clinic_infos.web:faker.internet.url
+public.exercise_feedbacks.message:extension.replaceWithString
+public.messages.text:extension.replaceWithString
+public.therapy_task_feedbacks.message:extension.replaceWithString
+sendbird_webhooks.calls.notes:extension.replaceWithString
+sendbird_webhooks.messages.contents:extension.replaceWithString
