adds RandomPassword for emails

--- a/faker.config
+++ b/faker.config
@@ -1,5 +1,5 @@
 public.accounts.email:faker.internet.email
-public.accounts.password_digest:extension.replaceWithEmptyString
+public.accounts.password_digest:extension.randomPassword
 public.accounts.password_reset_token:extension.replaceWithEmptyString
 public.accounts.qr_token:extension.replaceWithEmptyString
 public.addresses.street:faker.address.streetName
