--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   },
   "bugs": "https://github.com/rap2hpoutre/pg-anonymizer/issues",
   "dependencies": {
+    "@faker-js/faker": "^6.2.0",
     "@oclif/command": "^1.8.16",
     "@oclif/config": "^1.18.2",
     "@oclif/plugin-help": "^5.1.10",
-    "@faker-js/faker": "^6.2.0",
+    "bcrypt": "^5.1.0",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
