add hash file and fix faker config

--- a/faker.config
+++ b/faker.config
@@ -1,4 +1,4 @@
-public.accounts.email:randomEmail
+public.accounts.email:extension.randomEmail
 public.accounts.password_digest:extension.randomPassword
 public.accounts.password_reset_token:extension.replaceWithEmptyString
 public.accounts.qr_token:extension.replaceWithEmptyString
